--- a/skcrm/src/main/profiles/dev/jdbc.properties
+++ b/skcrm/src/main/profiles/dev/jdbc.properties
@@ -7,6 +7,12 @@ jdbc_name=root
 jdbc_pwd=root
 #------------252 end
 
+#------------外网测试 start
+#jdbc_url=jdbc:mysql://123.57.88.163:3306/skcrm?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+#jdbc_name=root
+#jdbc_pwd=sankai@6886
+#------------外网测试 end
+
 #------------252account_center4 start
 jdbc_url_yun=jdbc:mysql://127.0.0.1:3306/account_center4?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
 jdbc_name_yun=root
